--- a/_data/Projects.yml
+++ b/_data/Projects.yml
@@ -2,20 +2,16 @@ subject: Projects
 listing-order: 3
 icon: "/assets/img/clipboard-list.svg"
 contents:
-  - title: "ChatPPT ([https://chat.opena1.com/](https://chat.openai.com/))"
+  - title: "Final Year Project – Pneumonia Detection Web App"
     description: 
-      - Chatbot developed based on a large language model
-      - Designed Generative algorithm to generate novel human-like content
-      - "Technology Used: Rust, Typescript, Python, Ruby"
-    image: "![](https://i.ibb.co/hX2wYLB/231321.webp)"
-  - title: "AW5-cli ([https://github.com/aw5/aw5-cli](https://github.com/aws/aws-cli))"
+      - Built a pneumonia classification model using transfer learning with DenseNet121 and custom CNN layers
+      - Trained on labeled chest X-ray images to classify pneumonia vs. normal with high accuracy
+      - Integrated into a Django-based web app for real-time image upload and AI-powered diagnosis
+      - "Technology Used: Python, TensorFlow, Keras, DenseNet121, Transfer Learning, Deep Learning, Django"
+  - title: "Intelligent RAG Chat System with Memory Management"
     description: 
-      - Universal Command Line Interface for Amazone Web Services
-      - Developed a scheme to facilitate users’ authentication without having to remember their credentials
-      - "Technology Used: Typescript, Python, Go"
-    image: "![](https://i.ibb.co/Ttb5Qn9/21321312.webp)"
-  - title: "PiTorch ([https://pitorch.org/](https://pytorch.org/))" 
-    description: 
-      - Machine learning library for applications such as computer vision and natural language processing
-      - "Technology Used: Python, Cuda, Objective-C++"
-    image: "![](https://i.ibb.co/R9150c4/12421323.webp)"
+      - Developed a Retrieval-Augmented Generation (RAG) system for real-time context-aware conversations using FAISS for semantic search
+      - Used Sentence Transformers for embedding generation and OpenAI API for natural language processing
+      - Designed a modular microservices architecture with background workers for summarization, embedding, and PostgreSQL-based session management
+      - Built to support scalable, concurrent chat processing with vector search capabilities
+      - "Technology Used: Python, PostgreSQL, FAISS, Sentence Transformers, OpenAI API, Vector Search"
