--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,21 @@
-title: Title of your CV site
+title: Hamza Rasheed 
 profile_img: /assets/img/profile.webp
 icon_img: /assets/img/icon.webp
 
-name: "Your Name Here"
-job: "〈Your Job Here〉"
+name: "Hamza Rasheed"
+job: "Artificial Intelligence Engineer"
 
-phone_number: 012-345-6789
-address: City, Country
-email: email@example.com
-linkedin_username: linkedin
-github_username: github
-instagram_username: instagram
-twitter_username: twitter
-facebook_username: facebook
-youtube_username: youtube
-blog_url: homepage-url
+phone_number: +92 303 5030738
+address: Lahore
+email: hamxa.hnd@gmail.com
+linkedin_username: hamza-rasheed-6a9b3b23a
+github_username: hmzarasheed
+resume_page: /Hamza-Rasheed.pdf
 
 # If your repo name follows the format "<user-name>.github.io", then leave the below blank.
 # Otherwise, set its value as "/<repo-name>". ex) baseurl: /resume
 baseurl:
+url: "https://hamzarasheed.github.io"
 
 exclude:
   - _posts/
