--- a/_data/Awards.yml
+++ b/_data/Awards.yml
@@ -2,12 +2,7 @@ subject: Awards
 listing-order: 6
 icon: "/assets/img/trophy.svg"
 contents:
-  - title: IEEEE Fellow
-    description: Association for Natural Language Processing
-    date: Feb. 2024
-  - title: Gogle CodeJam
-    description: 3rd place in Gogle CodeJam
-    date: Jul. 2013
-  - title: Millennium Hackaton
-    description: won the best Inspirational Youth Awards
-    date: Oct. 2010
+  # Awards section kept empty - to be filled when awards are available
+  # - title: Award Name
+  #   description: Description of the award
+  #   date: Date Received
