--- a/_data/Publications.yml
+++ b/_data/Publications.yml
@@ -1,7 +1,7 @@
-subject: Publications
-listing-order: 4
-icon: "/assets/img/flask.svg"
-contents:
+# subject: Publications
+# listing-order: 4
+# icon: "/assets/img/flask.svg"
+# contents:
   # Publications section kept empty - to be filled when publications are available
   # - title: Journal
   #   ref: 
