--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ icon_img: /assets/img/icon.webp
 name: "Hamza Rasheed"
 job: "Artificial Intelligence Engineer"
 
-phone_number: +92 303 5030738
+phone_number: 
 address: Lahore
 email: hamxa.hnd@gmail.com
 linkedin_username: hamza-rasheed-6a9b3b23a
