--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ address: Lahore
 email: hamxa.hnd@gmail.com
 linkedin_username: hamza-rasheed-6a9b3b23a
 github_username: hmzarasheed
-resume_page: /Hamza-Rasheed.pdf
+resume_page: /Hamza_rasheed.pdf
 
 # If your repo name follows the format "<user-name>.github.io", then leave the below blank.
 # Otherwise, set its value as "/<repo-name>". ex) baseurl: /resume
